remove ajax handler functions (use Classe methods for this)

--- a/form-shortcode/style.css
+++ b/form-shortcode/style.css
@@ -14,7 +14,9 @@
 	z-index: 2;
 	background: #FFF url("./ajax-loader.gif") center center no-repeat;
 }
-
+#registrationForm.lr-form .form-field{
+    margin-bottom: 12px;
+}
 #registrationForm.lr-form, #loginForm .lr-form {
 	width: 100%
 }
@@ -39,4 +41,12 @@
 
 #registrationForm.lr-form input, #loginForm.lr-form input {
 	padding: 15px;
+}
+
+#registrationForm  .button.medium {
+    font: normal 300 30px/58px 'Roboto Condensed', sans-serif;
+    color: white;
+    padding: 0 40px;
+    height: auto;
+    background-color: #e0922f;
 }
