--- a/includes/updateProfileTpl.html
+++ b/includes/updateProfileTpl.html
@@ -2,46 +2,40 @@
 	<form>
 		<fieldset>
 			<div class="formItem">
-				<label for="first_name">{{first_name.translate}}</label> 
-				<input type="text"
-					name="first_name" value="{{first_name.val}}"
+				<label for="first_name">{{first_name.translate}}</label> <input
+					type="text" name="first_name" value="{{first_name.val}}"
 					class="text ui-widget ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem">
-				<label for="last_name">{{last_name.translate}}</label> 
-				<input type="text"
-					name="last_name" value="{{last_name.val}}"
+				<label for="last_name">{{last_name.translate}}</label> <input
+					type="text" name="last_name" value="{{last_name.val}}"
 					class="text ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem">
-				<label for="display_name">{{display_name.translate}}</label>
-				<input type="text"
-					name="display_name" value="{{display_name.val}}"
+				<label for="display_name">{{display_name.translate}}</label> <input
+					type="text" name="display_name" value="{{display_name.val}}"
 					class="text ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem">
-				<label for="country">{{country.translate}}</label>
-				<input type="text"
-					name="country" value="{{country.val}}"
+				<label for="country">{{country.translate}}</label> <input
+					type="text" name="country" value="{{country.val}}"
 					class="text ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem">
-				<label for="city">{{city.translate}}</label>
-				<input type="text"
+				<label for="city">{{city.translate}}</label> <input type="text"
 					name="city" value="{{city.val}}"
 					class="text ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem">
-				<label for="age">{{age.translate}}</label>
-				<input type="number" min="16" max="100"
-					name="age" value="{{age.val}}"
+				<label for="age">{{age.translate}}</label> <input type="number"
+					min="16" max="100" name="age" value="{{age.val}}"
 					class="ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem gender">
-				<label for="gender">{{gender.translate.gender}}</label>
-				<select id="gender" name="gender">
-					<option value="{{gender.translate.male}}" {{gender.male.selected}}>{{gender.translate.male}}</option>
-					<option value="{{gender.translate.female}}" {{gender.female.selected}}>{{gender.translate.female}}</option>
+				<label for="gender">{{gender.translate.gender}}</label> <select
+					id="gender" name="gender">
+					<option value="{{gender.translate.male}}"{{gender.male.selected}}>{{gender.translate.male}}</option>
+					<option value="{{gender.translate.female}}"{{gender.female.selected}}>{{gender.translate.female}}</option>
 				</select>
 			</div>
 		</fieldset>
