--- a/includes/jsTemplates.html
+++ b/includes/jsTemplates.html
@@ -2,33 +2,28 @@
 	<form>
 		<fieldset>
 			<div class="formItem">
-				<label for="first_name">{{first_name.translate}}</label> 
-				<input type="text"
-					name="first_name" value="{{first_name.val}}"
+				<label for="first_name">{{first_name.translate}}</label> <input
+					type="text" name="first_name" value="{{first_name.val}}"
 					class="text ui-widget ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem">
-				<label for="last_name">{{last_name.translate}}</label> 
-				<input type="text"
-					name="last_name" value="{{last_name.val}}"
+				<label for="last_name">{{last_name.translate}}</label> <input
+					type="text" name="last_name" value="{{last_name.val}}"
 					class="text ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem">
-				<label for="display_name">{{display_name.translate}}</label>
-				<input type="text"
-					name="display_name" value="{{display_name.val}}"
+				<label for="display_name">{{display_name.translate}}</label> <input
+					type="text" name="display_name" value="{{display_name.val}}"
 					class="text ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem">
-				<label for="country">{{country.translate}}</label>
-				<input type="text"
-					name="country" value="{{country.val}}"
+				<label for="country">{{country.translate}}</label> <input
+					type="text" name="country" value="{{country.val}}"
 					class="text ui-widget-content ui-corner-all" />
 			</div>
 			<div class="formItem">
-				<label for="citydisplay_name">{{city.translate}}</label>
-				<input type="text"
-					name="city" value="{{city.val}}"
+				<label for="citydisplay_name">{{city.translate}}</label> <input
+					type="text" name="city" value="{{city.val}}"
 					class="text ui-widget-content ui-corner-all" />
 			</div>
 		</fieldset>
